# Connect4Game

./: .gitignore  CMakeLists.txt  main.cpp
lib/: main.cpp
lib/board/: Connect4Board.cpp  Connect4Board.hpp  IBoard.hpp
lib/game/: Connect4Game.cpp  Connect4Game.hpp  IGame.hpp
lib/interface/: Console.cpp  Console.hpp
lib/player/: Connect4Player.cpp  Connect4Player.hpp  IPlayer.hpp
lib/strategy/: Connect4WinStrategy.cpp  Connect4WinStrategy.hpp  IWinStrategy.hpp
